--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "demo:simulator": "ts-node scripts/demoEventSimulator.ts",
     "run:simulator": "ts-node scripts/runEventSimulator.ts",
     "test:accumulator": "ts-node scripts/testAccumulatorRaft.ts",
+    "test:integration": "ts-node scripts/testIntegration.ts",
+    "test:agents": "ts-node scripts/testMockAgents.ts",
     "dev": "ts-node index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
