--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
+    "phase1": "npx ts-node index.ts",
+    "phase1:test": "npx ts-node index.ts --test",
     "test:step1": "ts-node scripts/testStep1.ts",
     "test:simulator": "ts-node scripts/testEventSimulator.ts",
     "demo:simulator": "ts-node scripts/demoEventSimulator.ts",
@@ -12,7 +14,7 @@
     "test:accumulator": "ts-node scripts/testAccumulatorRaft.ts",
     "test:integration": "ts-node scripts/testIntegration.ts",
     "test:agents": "ts-node scripts/testMockAgents.ts",
-    "dev": "ts-node index.ts",
+    "dev": "npx ts-node index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
